# pawn_grabber

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE  board.cpp  board.h  format.sh  format_and_test_ubuntu  perft_test_copy.txt  perft_test_no_copy.txt  python_zobrist_table.txt  test.sh  transposition_table.cpp  transposition_table.h  zobrist_table.txt
src/: BUILD  board.cc  board.h  board_test.cc  eval.cc  main.cc  perft.cc
tests/: board_tests.cpp
